update webhook and run script for deployment
