# src/routes.ts
@@ -94,7 +94,7 @@ export function RegisterRoutes(app: express.Router) {
         app.post('/coinbase/webhook',
             function coinbaseController_webhook(request: any, response: any, next: any) {
             const args = {
-                    body: {"in":"body","name":"body","required":true,"ref":"CoinbaseWebhook"},
+                    body: {"in":"body","name":"body","required":true,"dataType":"union","subSchemas":[{"dataType":"any"},{"ref":"CoinbaseWebhook"}]},
             };
 
             // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
